# ssm

./: .gitignore  ggplot_perso.mplstyle  pyproject.toml  segmentation_utils.py  setup.py  ur5e-TT-HSMM.ipynb
doc/: conf.py
examples/: constrained-arhmm.ipynb  constrained-arhmm.py  em-for-students-t.ipynb  em-for-students-t.py  hmm.py  hmm_exponential.py  hsmm.py  lds.py  rslds.py  slds.py
notebooks/: 1-Simple-HMM-Demo.ipynb  1-Simple-HMM-Demo.py  1b-Simple-Linear-Dynamical-System.ipynb  1b-Simple-Linear-Dynamical-System.py  2-Input-Driven-HMM.ipynb  2-Input-Driven-HMM.py  2b-Input-Driven-Observations-(GLM-HMM).ipynb  2b-Input-Driven-Observations-(GLM-HMM).py  3-Switching-Linear-Dynamical-System.ipynb  3-Switching-Linear-Dynamical-System.py  4-Recurrent-SLDS.ipynb  4-Recurrent-SLDS.py  5-Poisson-SLDS.ipynb  5-Poisson-SLDS.py  6-Poisson-fLDS.ipynb  6-Poisson-fLDS.py  7-Variatonal-Laplace-EM-for-SLDS-Tutorial.ipynb  7-Variatonal-Laplace-EM-for-SLDS-Tutorial.py  HMM-State-Clustering.ipynb  HMM-State-Clustering.py  Multi-Population-rSLDS.ipynb  Multi-Population-rSLDS.py  Poisson-HMM-Demo.ipynb  Poisson-HMM-Demo.py
ssm/: __init__.py  emissions.py  hierarchical.py  hmm.py  init_state_distns.py  lds.py  messages.py  model_selection.py  observations.py  optimizers.py  plots.py  preprocessing.py  primitives.py  regression.py  stats.py  transitions.py  util.py  variational.py
ssm/extensions/mp_srslds/: emissions_ext.py  initializations.py  observations_ext.py  transitions_ext.py
tests/: lds_benchmarks.py  test_basics.py  test_hmm_gradients.py  test_lds.py  test_stats.py
