[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "Cython",
    "numpy",
]

[project]
name = "ssm"
dynamic = [
        "description",
        "readme",
        "maintainers",
        "classifiers",
        "version",
        ]
# license = "MIT"
dependencies = [
	"numpy",
    "scipy",
    "numba",
    "scikit-learn",
    "tqdm",
    "autograd",
	"Cython",
    "seaborn",
	"matplotlib",
    "jupyterlab",
    "ipywidgets",
    "ipdb",
    "ruff",
]
